clusters/homelab-1/.network-policies/allow-ingress-from-uptime-kuma/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-uptime-kuma
spec:
  podSelector:
    matchLabels:
      networking/ingress-allow-uptime-kuma: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: uptime-kuma-app
              app.kubernetes.io/instance: uptime-kuma-app
